fixed alignment mobile and added more transitions

--- a/src/css/scss/sections/_brands.scss
+++ b/src/css/scss/sections/_brands.scss
@@ -1,5 +1,10 @@
 #brands {
-    padding: 60px 0;
+    padding-bottom: 10px;
+    padding-top: 10px;
+
+    @include lg {
+        padding: 60px 0;
+    }
 
     .container {
         display: none;
