--- a/src/css/scss/sections/_features.scss
+++ b/src/css/scss/sections/_features.scss
@@ -1,5 +1,4 @@
 #features {
-    margin-top: 40px;
     display: grid;
     grid-template-columns: 1fr; 
     grid-template-rows: auto; 
